--- a/go/cmd/idir-gen/Dockerfile
+++ b/go/cmd/idir-gen/Dockerfile
@@ -55,8 +55,8 @@ RUN apt-get install -qy perl cpanminus \
 RUN apt-get clean
 
 COPY build/polaris /usr/local/bin/polaris
-COPY build/polaris_submit /usr/local/bin/polaris_submit
-COPY build/polaris_wait /usr/local/bin/polaris_wait
+COPY build/polaris-submit /usr/local/bin/polaris-submit
+COPY build/polaris-wait /usr/local/bin/polaris-wait
 
 COPY build/idir_gen_linux ./runPolarisJob
 
